{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 115,
  "lineage": "820398fa-6413-0a93-28e5-97ece76dcd72",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:611089428855:internet-gateway/igw-076293daa3fe79264",
            "id": "igw-076293daa3fe79264",
            "owner_id": "611089428855",
            "tags": {
              "Env": "stg",
              "Name": "catcher-stg-igw"
            },
            "tags_all": {
              "Env": "stg",
              "Name": "catcher-stg-igw"
            },
            "vpc_id": "vpc-0798c1cff813f4509"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:611089428855:route-table/rtb-0d99eb41da86af2af",
            "id": "rtb-0d99eb41da86af2af",
            "owner_id": "611089428855",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "catcher-stg-pv-rt"
            },
            "tags_all": {
              "Name": "catcher-stg-pv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0798c1cff813f4509"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:611089428855:route-table/rtb-0649ed859f873e686",
            "id": "rtb-0649ed859f873e686",
            "owner_id": "611089428855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-076293daa3fe79264",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "catcher-stg-pb-rt"
            },
            "tags_all": {
              "Name": "catcher-stg-pb-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0798c1cff813f4509"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca07dae9102bc09d",
            "route_table_id": "rtb-0d99eb41da86af2af",
            "subnet_id": "subnet-0bc9d1f0729134f97"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03baa11da09b66444",
            "route_table_id": "rtb-0d99eb41da86af2af",
            "subnet_id": "subnet-050d4158d9b149aac"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05849c6f5df9a471e",
            "route_table_id": "rtb-0649ed859f873e686",
            "subnet_id": "subnet-02cfb9fe592fcd7d6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbd74e62ac4327d0",
            "route_table_id": "rtb-0649ed859f873e686",
            "subnet_id": "subnet-0379cae191b3f65f3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:611089428855:subnet/subnet-0bc9d1f0729134f97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc9d1f0729134f97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611089428855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "stg",
              "Name": "catcher-stg-pv-sbn"
            },
            "tags_all": {
              "Env": "stg",
              "Name": "catcher-stg-pv-sbn"
            },
            "vpc_id": "vpc-0798c1cff813f4509"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:611089428855:subnet/subnet-050d4158d9b149aac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050d4158d9b149aac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611089428855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "stg",
              "Name": "catcher-stg-pv-sbn"
            },
            "tags_all": {
              "Env": "stg",
              "Name": "catcher-stg-pv-sbn"
            },
            "vpc_id": "vpc-0798c1cff813f4509"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:611089428855:subnet/subnet-02cfb9fe592fcd7d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cfb9fe592fcd7d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611089428855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "stg",
              "Name": "catcher-stg-pb-sbn"
            },
            "tags_all": {
              "Env": "stg",
              "Name": "catcher-stg-pb-sbn"
            },
            "vpc_id": "vpc-0798c1cff813f4509"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:611089428855:subnet/subnet-0379cae191b3f65f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0379cae191b3f65f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611089428855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "stg",
              "Name": "catcher-stg-pb-sbn"
            },
            "tags_all": {
              "Env": "stg",
              "Name": "catcher-stg-pb-sbn"
            },
            "vpc_id": "vpc-0798c1cff813f4509"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:611089428855:vpc/vpc-0798c1cff813f4509",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d265be9c37e37b1",
            "default_route_table_id": "rtb-04a3a6544a4ee5db4",
            "default_security_group_id": "sg-0cc308780f05e0674",
            "dhcp_options_id": "dopt-06e3462ebbe295bf8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0798c1cff813f4509",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a3a6544a4ee5db4",
            "owner_id": "611089428855",
            "tags": {
              "Env": "stg",
              "Name": "catcher-stg-temp-vpc"
            },
            "tags_all": {
              "Env": "stg",
              "Name": "catcher-stg-temp-vpc"
            }
          }
        }
      ]
    }
  ]
}